--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -18,7 +18,7 @@
 # This properties file lists the versions of the various artifacts we use.
 # It drives ivy and the generation of a maven POM
 
-avro.version=1.8.0
+avro.version=1.8.1
 
 kite-data.version=1.0.0
 
@@ -50,3 +50,10 @@ rats-lib.version=0.5.1
 aspectj.version=1.6.11
 
 postgresql.version=9.2-1003-jdbc4
+accumulo.version=1.6.2
+
+slf4j.version=1.7.7
+
+hadoop.version=2.6.0
+hbase.version=1.2.4
+hcatalog.version=1.2.1
