--- a/pom.xml
+++ b/pom.xml
@@ -934,6 +934,7 @@ limitations under the License.
       <organization>Cloudera</organization>
       <roles>
         <role>committer</role>
+        <role>PMC member</role>
       </roles>
     </developer>
     <developer>
@@ -943,6 +944,14 @@ limitations under the License.
       <roles>
         <role>committer</role>
         <role>PMC member</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>annaszonyi</id>
+      <name>Anna Szonyi</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>committer</role>
       </roles>
     </developer>
     <developer>
