SQOOP-3203: Update build file and docs with new version
(Attila Szabo)

--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.7-SNAPSHOT" />
+  <property name="version" value="1.4.7" />
 
   <!-- Ivy library properties -->
   <property name="ivy.dir" location="${basedir}/ivy" />
