SQOOP-3217: Sqoop2: Add Boglarka Egyed to committer list in our pom file
(Abraham Fine via Boglarka Egyed)

--- a/pom.xml
+++ b/pom.xml
@@ -973,6 +973,14 @@ limitations under the License.
       </roles>
     </developer>
     <developer>
+      <id>bogi</id>
+      <name>Boglarka Egyed</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>committer</role>
+      </roles>
+    </developer>
+    <developer>
       <id>cheolsoo</id>
       <name>Cheolsoo Park</name>
       <organization>StreamSets</organization>
