SQOOP-3256: Sqoop2: Add Szabolcs Vasas to committer list in our pom file
(Boglarka Egyed via Szabolcs Vasas)

--- a/pom.xml
+++ b/pom.xml
@@ -1150,6 +1150,14 @@ limitations under the License.
       </roles>
     </developer>
     <developer>
+      <id>vasas</id>
+      <name>Szabolcs Vasas</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>committer</role>
+      </roles>
+    </developer>
+    <developer>
       <id>venkatnrangan</id>
       <name>Venkat Ranganathan</name>
       <organization>Hortonworks</organization>
