--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -37,6 +37,7 @@ hsqldb.version=1.8.0.10
 ivy.version=2.3.0
 
 junit.version=4.12
+assertj.version=2.8.0
 mockito-all.version=1.9.5
 
 h2.version=1.3.170
