Revert "Test output is not generated by ant."
This reverts commit d0c143e5be8c0dd3ac249a67bfad1c27fab6962f.

--- a/build.xml
+++ b/build.xml
@@ -888,7 +888,7 @@
         <!-- include cobertura itself on the classpath -->
         <path refid="cobertura.classpath" />
       </classpath>
-      
+      <formatter type="${test.junit.output.format}" />
       <batchtest todir="${build.test}" unless="testcase">
         <fileset dir="${test.dir}"
                  includes="**/${test.pattern}.java"
