SQOOP-3307: Don't create HTML during Ivy report
(Daniel Voros via Boglarka Egyed)

--- a/build.xml
+++ b/build.xml
@@ -1390,7 +1390,7 @@
 
   <target name="report" depends="ivy-resolve-hadoop">
     <mkdir dir="build/report"/>
-    <ivy:report todir="build/report"/>
+    <ivy:report todir="build/report" xsl="false" />
   </target>
 
 </project>
