--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -26,11 +26,13 @@ checkstyle.version=5.0
 
 commons-cli.version=1.2
 commons-collections.version=3.2.2
-commons-io.version=1.4
+commons-io.version=2.4
 commons-lang.version=2.4
 commons-lang3.version=3.4
-commons-logging.version=1.0.4
+commons-logging.version=1.2
 commons-net.version=3.1
+commons-pool.version=1.6
+commons-codec.version=1.9
 
 hsqldb.version=1.8.0.10
 
@@ -58,3 +60,5 @@ slf4j.version=1.7.7
 hadoop.version=2.6.0
 hbase.version=1.2.4
 hcatalog.version=1.2.1
+
+jackson-databind.version=2.9.5
