--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -20,8 +20,6 @@
 
 avro.version=1.8.1
 
-kite-data.version=1.1.0
-
 checkstyle.version=5.0
 
 commons-cli.version=1.2
@@ -62,3 +60,4 @@ hbase.version=1.2.4
 hcatalog.version=1.2.1
 
 jackson-databind.version=2.9.5
+parquet.version=1.6.0
